
              ppmfade: fix "file not found" crash for most fade modes.
              Introduced in Netpbm 10.98 (March 2022).

              ppmfade: fix incorrect block mode fade.  Always broken
              (ppmfade was new in Netpbm 8.4 (April 2000)).

              pamaddnoise: fix very incorrect noise added for all types.
              Introduced in Netpbm 10.94 (March 2021).

              pgmtexture: Fix buffer overflow with maxval > 255.  Always
              broken.  Maxvals > 255 were possible starting in Netpbm 9.0
              (April 2000).

              pgmtexture: Fix bug: ignores -d.  Introduced in Netpbm 10.56
              (September 2011).

              library: add check of maxval for computable size.

              Build: Include LDFLAGS in link of shared library.

23.06.28 BJH  Release 11.03.00

              pamstack: Add -firstmaxval, -lcmmaxval

              pnmcolormap: make result independent of how system's qsort
              orders records with equal keys.  Affects pnmquant.

              pamtopng: fix typo in error message about -chroma option.

              pamtopng, pnmtopng, pngtopam: fix error message when something
              fails in libpng.  Always broken (the programs were new in Netpbm
              8.1 (March 2000)).

23.03.25 BJH  Release 11.02.00

              jpegtopnm: Add -traceexif

              pbmtextps: Add -asciihex, -ascii85.

              pcdovtoppm: remove dependency on obsolete 'tempfile' program.

              jpegtopnm: Many fixes to -dumpexif.  Always broken.
              (-dumpexif was new in Netpbm 9.18 (September 2001))

              pamtopng: fix -chroma option: always rejected.  Always broken.
              (pamtopng was new in Netpbm 10.70 (June 2015)).

              pnmtopng: fix -rgb option: always rejected.  Always broken
              (-rgb was new in Netpbm 10.30 (October 2005)).

              build: change the way you add the separately distributed